<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.scorekeeperapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/badminton" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@string/fontForPlayer"
                            android:gravity="center_horizontal"
                            android:padding="16dp"
                            android:text="@string/player_1"
                            android:textColor="@color/textColor"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/player_1_score"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            android:fontFamily="@string/fontForScore"
                            android:gravity="center_horizontal"
                            android:text="0"
                            android:textColor="@color/textColorForScore"
                            android:textSize="85sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/plus1PointBenefitPlayer1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:background="@color/backgroundForWin"
                            android:onClick="onClick"
                            android:text="@string/win"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/faultPlus1PointBenefitPlayer2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/backgroundColorForFault"
                            android:onClick="onClick"
                            android:text="@string/fault"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/redCardPlayer1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/backgroundColorForRedCard1"
                            android:onClick="onClick"
                            android:text="@string/red_card_1"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/player2Win"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/backgroundForRedCard2"
                            android:onClick="onClick"
                            android:text="@string/red_card_2"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:background="@android:color/darker_gray" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily=" sans-serif-medium"
                            android:gravity="center_horizontal"
                            android:padding="16dp"
                            android:text="Player 2"
                            android:textColor="#FFF59D"
                            android:textSize="25sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/player_2_score"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="24dp"
                            android:fontFamily="@string/fontForScore"
                            android:gravity="center_horizontal"
                            android:text="0"
                            android:textColor="@color/textColorForScore"
                            android:textSize="85sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/plus1PointBenefitPlayer2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:background="@color/backgroundForWin"
                            android:onClick="onClick"
                            android:text="@string/win"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/faultPlus1PointBenefitPlayer1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/backgroundColorForFault"
                            android:onClick="onClick"
                            android:text="@string/fault"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/redCardPlayer2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/backgroundColorForRedCard1"
                            android:onClick="onClick"
                            android:text="@string/red_card_1"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/player1Win"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginTop="8dp"
                            android:background="@color/backgroundForRedCard2"
                            android:onClick="onClick"
                            android:text="@string/red_card_2"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="32dp"
            android:onClick="resetMethod"
            android:text="@string/play_again"
            android:textSize="18sp" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
